kubernetes/apps/cicd/tekton-pipelines/tekton/pac/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pipelines-as-code-route
  namespace: pipelines-as-code
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Pipelines-as-Code
    gethomepage.dev/description: Tekton GitOps Webhook Listener
    gethomepage.dev/group: Development
    gethomepage.dev/icon: tekton.png
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
  hostnames:
    - "pac.${DOMAIN1}"
  rules:
    - backendRefs:
        - name: pipelines-as-code-controller
          port: 8080
          namespace: pipelines-as-code
